# Garden

./: README.md  com.jeffser.Garden.json  meson.build
data/: com.jeffser.Garden.desktop.in  com.jeffser.Garden.gschema.xml  com.jeffser.Garden.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: garden.gresource.xml  garden.in  main.py  meson.build  style.css  window.py  window.ui
src/custom_widgets/: shimeji_widget.py
